hphp/hack/test/typecheck/expression_trees/splice.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(): void {
  $x = ExampleDsl`4`;
  ExampleDsl`${$x}`;
}
